# c_cxx_template

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  unit_test.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: test.yaml
cmake/: clang_toolchain.cmake  gnu.cmake
src/: add.c  main.cpp
test/: test.sh
